<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:textSize="20sp" />
    
    <Button 
        android:id="@+id/btn1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextView1"
        android:layout_marginTop="10dp"
        android:text="@string/btn1"
        android:gravity="center_vertical"
        android:paddingLeft="80dp"/>
    
    <Button 
        android:id="@+id/btn2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn1"
        android:layout_marginTop="10dp"
        android:text="@string/btn2"
        android:gravity="center_vertical"
        android:paddingLeft="80dp"/>
    
    <Button 
        android:id="@+id/btn3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn2"
        android:layout_marginTop="10dp"
        android:text="@string/btn3"
        android:gravity="center_vertical"
        android:paddingLeft="120dp"/>
    
    <Button 
        android:id="@+id/btn4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn3"
        android:layout_marginTop="10dp"
        android:text="@string/btn4"
        android:gravity="center_vertical"
        android:paddingLeft="120dp"/>
    
    <Button 
        android:id="@+id/btn5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn4"
        android:layout_marginTop="10dp"
        android:text="@string/btn5"
        android:gravity="center_vertical"
        android:paddingLeft="120dp"/>

</RelativeLayout>
